Изменена функциональность истории просмотров задач, добавлены соответствующие тесты, 06.12.2024